--- a/index.html
+++ b/index.html
@@ -1,13 +1,52 @@
 <!DOCTYPE html>
 <html>
 
-  <head>
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
-  </head>
+<head>
+  <link rel="stylesheet" href="style.css">
+  <script src="script.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+</head>
 
-  <body>
-    <h1>Hello Tamby Sam and Aslan</h1>
-  </body>
+<body>
+  <div style="padding-left: 50px; padding-right: 50px; ">
+    <nav class="navbar navbar-inverse">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="#">F10 CS</a>
+        </div>
+        <ul class="nav navbar-nav">
+          <li class="active"><a href="#">Home</a></li>
+          <li class="dropdown">
+            <a class="dropdown-toggle" id="team" data-toggle="dropdown" href="#">Our Team
+        <span class="caret"></span></a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+    <ul>
+      <li>Amazing web developers</li>
+      <li>10+ years of debugging skills</li>
+      <li>Angular 2 support</li>
+    </ul>
+
+    <div id="images">
+      <img style="width:200px;height:200px;" src="https://media.licdn.com/mpr/mpr/shrink_100_100/AAEAAQAAAAAAAAfGAAAAJDgxMDc3MjYyLWE3NWEtNDYyYS04ZWE0LTFmM2ZkMjQ3MDUzMw.jpg">
+      <img style="width:200px;height:200px;" src="https://media.licdn.com/mpr/mpr/shrinknp_200_200/AAEAAQAAAAAAAANCAAAAJGUzZTg2NGIwLTkzMmUtNGNkMC1iNjA3LTQzNWE3OGUzMmMzZg.jpg">
+      <img style="width:200px;height:200px;" src="http://media0.giphy.com/media/4ci8d3rJNrdAY/giphy.gif">
+    </div>
+  </div>
+
+  <script>
+    $(document).ready(function() {
+      $("#images").hide();
+    });
+
+    $("#team").click(function() {
+      $("#images").toggle("explode");
+    });
+  </script>
+</body>
 
 </html>
